<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_card_white"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_sitting_threshold_title"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:text="@string/dialog_sitting_threshold_subtitle"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/_12ssp" />

    <NumberPicker
        android:id="@+id/thresholdPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/_42sdp"
            android:layout_weight="1"
            android:text="@string/dialog_cancel"
            android:textAllCaps="false"
            android:textColor="@color/text_secondary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            style="@style/Widget.Material3.Button"
            android:layout_width="0dp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:text="@string/dialog_save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@color/primary"
            app:cornerRadius="@dimen/_10sdp" />

    </LinearLayout>

</LinearLayout>
