<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_card_white"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_doomscroll_apps_title"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:text="@string/dialog_doomscroll_apps_subtitle"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/_12ssp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_220sdp"
        android:layout_marginTop="@dimen/_14sdp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/appsLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/dialog_doomscroll_apps_loading"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/_12ssp" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/appsRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/appsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                tools:listitem="@layout/item_app_checkbox" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/_14sdp"
        android:background="@color/border_subtle" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:text="@string/dialog_doomscroll_limit_label"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold" />

    <NumberPicker
        android:id="@+id/limitPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/_42sdp"
            android:layout_weight="1"
            android:text="@string/dialog_cancel"
            android:textAllCaps="false"
            android:textColor="@color/text_secondary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            style="@style/Widget.Material3.Button"
            android:layout_width="0dp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:text="@string/dialog_save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@color/primary"
            app:cornerRadius="@dimen/_10sdp" />

    </LinearLayout>

</LinearLayout>
