<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/_24sdp">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/ctaButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/_12sdp"
            android:paddingBottom="@dimen/_16sdp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="serif"
                android:text="@string/onboarding_2_title"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/_24ssp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/onboarding_2_subtitle"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/_12ssp" />

            <!-- Layer 1 -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/bg_card_white"
                android:orientation="vertical"
                android:padding="@dimen/_14sdp">

                <FrameLayout
                    android:id="@+id/frameLayout"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/bg_icon_square_blue"
                    app:layout_constraintBottom_toBottomOf="@+id/materialTextView2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:layout_gravity="center"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_droplet" />
                </FrameLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:text="@string/layer_1_title"
                    android:textColor="@color/text_primary"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/materialTextView2"
                    app:layout_constraintStart_toEndOf="@+id/frameLayout"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.05"
                    android:text="@string/layer_1_number"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/_9ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_marginStart="@dimen/_16sdp"
                    android:id="@+id/materialTextView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/layer_1_body"
                    android:textColor="@color/text_secondary"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/frameLayout" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Layer 2 -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/bg_card_white"
                android:orientation="vertical"
                android:padding="@dimen/_14sdp">

                <FrameLayout
                    android:id="@+id/frameLayout2"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/bg_icon_square_green"
                    app:layout_constraintBottom_toBottomOf="@+id/materialTextView3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:layout_gravity="center"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_sprout" />
                </FrameLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:text="@string/layer_2_title"
                    android:textColor="@color/text_primary"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/materialTextView3"
                    app:layout_constraintStart_toEndOf="@+id/frameLayout2"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.05"
                    android:text="@string/layer_2_number"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/_9ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_marginStart="@dimen/_16sdp"
                    android:id="@+id/materialTextView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/layer_2_body"
                    android:textColor="@color/text_secondary"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/frameLayout2" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Layer 3 -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/bg_card_white"
                android:orientation="vertical"
                android:padding="@dimen/_14sdp">

                <FrameLayout
                    android:id="@+id/frameLayout3"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/bg_icon_square_peach"
                    app:layout_constraintBottom_toBottomOf="@+id/materialTextView4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:layout_gravity="center"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_moon" />
                </FrameLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:text="@string/layer_3_title"
                    android:textColor="@color/text_primary"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/materialTextView4"
                    app:layout_constraintStart_toEndOf="@+id/frameLayout3"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.05"
                    android:text="@string/layer_3_number"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/_9ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_marginStart="@dimen/_16sdp"
                    android:id="@+id/materialTextView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/layer_3_body"
                    android:textColor="@color/text_secondary"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/frameLayout3" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_leaf"
        android:drawablePadding="@dimen/_10sdp"
        android:text="@string/onboarding_2_footer"
        android:textColor="@color/text_primary"
        android:layout_marginBottom="@dimen/_10sdp"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ctaButton"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        android:text="@string/onboarding_2_cta"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:backgroundTint="@color/primary"
        app:cornerRadius="@dimen/_10sdp"
        app:icon="@drawable/ic_arrow_right"
        app:iconGravity="textEnd"
        app:iconPadding="@dimen/_8sdp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
